[tool.poetry]
name = "quant-invest-lab"
version = "0.2.3"
description = "Quant Invest Lab is a python package to help you to do some quantitative experiments, while trying to learn or build quantitative investment solutions. This project was initially my own set of functionnalities but I decided to build a package for that and sharing it as open source project."
authors = ["BaptisteZloch <bzloch@hotmail.fr>"]
readme = "README.md"
packages = [{include = "quant_invest_lab"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "^2.0.1"
scipy = "^1.10.1"
statsmodels = "^0.14.0"
kucoin-python = "^1.0.11"
numpy = "^1.24.3"
ta = "^0.10.2"
plotly = "^5.14.1"
nbformat = "^5.8.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
tqdm = "^4.65.0"
beautifulsoup4 = "^4.12.2"
fitter = "^1.5.2"
scikit-learn = "^1.2.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
