[tool.poetry]
name = "quant-invest-lab"
version = "0.2.11"
description = "Quant Invest Lab is a python package to help you to do some quantitative experiments, while trying to learn or build quantitative investment solutions. This project was initially my own set of functionnalities but I decided to build a package for that and sharing it as open source project."
authors = ["BaptisteZloch <bzloch@hotmail.fr>"]
maintainers = ["BaptisteZloch <bzloch@hotmail.fr>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/BaptisteZloch/Quant-Invest-Lab"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Investment"
]
keywords = ["trading", "backtest","investments","portfolio","quantitative"]
packages = [{include = "quant_invest_lab"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/BaptisteZloch/Quant-Invest-Lab/issues"
"Homepage" = "https://github.com/BaptisteZloch/Quant-Invest-Lab"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^1.5.3"
scipy = "^1.10.1"
statsmodels = "^0.14.0"
kucoin-python = "^1.0.11"
numpy = "^1.23.5"
ta = "^0.10.2"
plotly = "^5.14.1"
nbformat = "^5.8.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
tqdm = "^4.64.1"
beautifulsoup4 = "^4.12.2"
fitter = "^1.5.2"
scikit-learn = "^1.2.2"
emd-signal = "^1.4.0"
pywavelets = "^1.4.1"
bokeh = "^3.2.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.0"
black = "^23.3.0"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.14"
mkdocs-material-extensions = "^1.1.1"
mkdocstrings = "^0.21.2"
mkdocstrings-python = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
